Added pc speaker audio driver (for Linux only)
Added date & time field info to ZSF snapshots
Added F-key function to show windows in background without having to open the menu
Added configuration & command line setting to save keymap type
Added SNA to SCR file converter
Added SP to SCR file converter
Added Z80 to SCR file converter
Added P to SCR file converter
Added ZSF to SCR file converter

Added ZRCP commands:
-qdos-get-open-files: to get open files from QL QDOS

Improved ZX Desktop: 
-Added direct buttons, to access menu items
-Added devices buttons/icons, to show device activity and device configuration
-Reordered menu items
-Windows are not closed when changing ZX Desktop size
-Added new ZX Desktop fill types: RainbowAlive, Chess, Grid, Random
-Improved input number windows: added buttons to increase/decrease values

Improved loading .pok files: increased maximum pokes from 100 to 49152 pokes
Improved 1 bit resample audio filter 
Improved ZRCP: Added MMU information to cpu-history command

Improved TBBlue emulation:
-Added emulation of tbblue joystick type (register 5)
-Added sprite zoom emulation
-Added relative sprites emulation
-Added sprite clipping emulation

Improved File Browser: added previews for screens (on .scr, .tap, .tzx, .pzx, .trd, .dsk, .sna, .sp, .z80, .p, .zsf)

Improved QL emulation:
-Added sound emulation
-Guessing of file name extension
-Show all registers on Debug CPU window

Fixed QL bugs:
-Fixed loading QL Superbasic programs when line lenght usually longer than 128 bytes
-Fixed loading executable files
-Fixed using QL system calls and A6 pointer offset used after previous Trap was not 4
-Fixed frame interrupt
-Fixed system call FS.SAVE
-Fixed system call FS.HEADS
-Fixed system call FS.HEADR
-Fixed system call IO.FSTRG
-Fixed system call IO.EDLIN
-Fixed system call IO.FCLOSE
-Fixed system call IO.DELET
-Fixed possible hang calling IO.SSTRG
-Fixed cursor flashing
-Fixed RTC emulation
-Fixed reading keyboard when menu open
